--- a/tvorchist.html
+++ b/tvorchist.html
@@ -128,15 +128,15 @@
  <div class="container text-center">
    <div class="row">
         <div class="col-md-4">
-    <img src="images/Прзентация1/1.jpg"  width="200" height="300" >
+    <img src="images/Прзентация1/1.JPG"  width="200" height="300" >
     <div class="py-3"> <a class="btn btn-success" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Детальніше</a></div>
 </div>
         <div class="col-md-4">
-    <img src="images/Презентация1/2.jpg"  width="200" height="300" >
+    <img src="images/Презентация1/2.JPG"  width="200" height="300" >
     <div class="py-3"><button class="btn btn-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Детальніше</button></div>
 </div>
         <div class="col-md-4">
-    <img src="images/Презентация1/3.jpg"  width="200" height="300" >
+    <img src="images/Презентация1/3.JPG"  width="200" height="300" >
     <div class="py-3"><button class="btn btn-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">Детальніше</button></div>
 </div>
 </div>
@@ -168,15 +168,15 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-md-4">
-    <img src="images/Презентация1/4.jpg"  width="200" height="300" >
+    <img src="images/Презентация1/4.JPG"  width="200" height="300" >
   <div class="py-3"> <a class="btn btn-success" data-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample4">Детальніше</a></div>
 </div>
         <div class="col-md-4">
-    <img src="images/Презентация1/5.jpg"  width="200" height="300" >
+    <img src="images/Презентация1/5.JPG"  width="200" height="300" >
      <div class="py-3"> <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample5" aria-expanded="false" aria-controls="multiCollapseExample5">Детальніше</button></div>
 </div>
         <div class="col-md-4">
-    <img src="images/Презентация1/6.jpg"  width="200" height="300" >
+    <img src="images/Презентация1/6.JPG"  width="200" height="300" >
      <div class="py-3"> <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample6" aria-expanded="false" aria-controls="multiCollapseExample6">Детальніше
      </button></div>
 </div>
@@ -209,7 +209,7 @@
 </div>
 
 <div class="container text-center">
-    <img src="images/с3.jpg"  class="img-fluid" align="center" vspace="5" hspace="5" >
+    <img src="images/с3.JPG"  class="img-fluid" align="center" vspace="5" hspace="5" >
      <div class="py-3"> <a class="btn btn-success" data-toggle="collapse" href="#multiCollapseExample7" role="button" aria-expanded="false" aria-controls="multiCollapseExample7">Детальніше</a>
     <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample8" aria-expanded="false" aria-controls="multiCollapseExample8">Детальніше
      </button> 
