--- a/tvorchist.html
+++ b/tvorchist.html
@@ -128,7 +128,7 @@
  <div class="container text-center">
    <div class="row">
         <div class="col-md-4">
-    <img src="images/Прзентация1/1.JPG"  width="200" height="300" >
+    <img src="images/Презентация1/1.JPG"  width="200" height="300" >
     <div class="py-3"> <a class="btn btn-success" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Детальніше</a></div>
 </div>
         <div class="col-md-4">
